--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 
 body{
     background-image: url("../images/background.jpg");
+    background-size: cover;
     font-family: 'Roboto';
     background-color: #033250;
 }
