--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body{
     background-size: cover;
     font-family: 'Roboto';
     background-color: #033250;
-    background: fixed;
+    background-position: fixed;
 }
 
 
