--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,8 @@ body{
     background-size: cover;
     font-family: 'Roboto';
     background-color: #033250;
-    background-position: fixed;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 
