--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body{
 
 
 div{
-    color: #87CEEB;
+    color: #ddffcc;
     font-size: 20px;
     width: 60%;
     margin: 0 auto;
@@ -26,5 +26,4 @@ div{
 p{
     color: #000;
 }
-
 
