--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body{
 
 
 div{
-    color: #eeffff;
+    color: #ccffff;
     font-size: 20px;
     width: 60%;
     margin: 0 auto;
@@ -24,6 +24,6 @@ div{
     line-height: 35px;
 }
 p{
-    color: #000;
+    color: #330033;
 }
 
